--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "frontend-starter-kit",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "(https://github.com/TpWILovePanda/frontend-starter-kit.git)"
-  },
-  "author": "LovePanda",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-image": "^2.9.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  }
+	"name": "frontend-starter-kit",
+	"version": "1.1.0",
+	"description": "lightweight front-end development boilerplate",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "(https://github.com/TpWILovePanda/frontend-starter-kit.git)"
+	},
+	"author": "LovePanda",
+	"license": "CC 4.0",
+	"devDependencies": {
+		"autoprefixer": "^7.1.2",
+		"babel-preset-es2015": "^6.24.1",
+		"gulp": "^3.9.1",
+		"gulp-babel": "^6.1.2",
+		"gulp-concat": "^2.6.1",
+		"gulp-connect": "^5.0.0",
+		"gulp-imagemin": "^3.3.0",
+		"gulp-minify-css": "^1.2.4",
+		"gulp-plumber": "^1.1.0",
+		"gulp-postcss": "^7.0.0",
+		"gulp-pug": "^3.3.0",
+		"gulp-rename": "^1.2.2",
+		"gulp-sass": "^3.1.0",
+		"gulp-sourcemaps": "^2.6.0",
+		"gulp-uglify": "^3.0.0"
+	}
 }
