--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
 		"autoprefixer": "^7.2.5",
 		"babel-core": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
+		"bootstrap": "^4.0.0",
 		"browser-sync": "^2.23.6",
 		"gulp": "^3.9.1",
 		"gulp-babel": "^7.0.1",
 		"gulp-clean": "^0.4.0",
 		"gulp-clean-css": "^3.9.2",
 		"gulp-concat": "^2.6.1",
+		"gulp-data": "^1.3.1",
+		"gulp-gh-pages": "^0.5.4",
 		"gulp-if": "^2.0.2",
 		"gulp-imagemin": "^4.1.0",
 		"gulp-load-plugins": "^1.5.0",
@@ -34,7 +37,8 @@
 		"gulp-sequence": "^1.0.0",
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-uglify": "^3.0.0",
-		"main-bower-files": "^2.13.1",
-		"minimist": "^1.2.0"
+		"jquery": "^3.3.1",
+		"minimist": "^1.2.0",
+		"vue": "^2.5.13"
 	}
 }
