--- a/package.json
+++ b/package.json
@@ -13,32 +13,33 @@
 	"author": "Tien-Yi",
 	"license": "ISC",
 	"dependencies": {
-		"autoprefixer": "^7.2.5",
-		"babel-core": "^6.26.0",
+		"autoprefixer": "^9.4.7",
+		"babel-core": "^6.26.3",
+		"babel-preset-env": "^1.7.0",
 		"babel-preset-es2015": "^6.24.1",
-		"bootstrap": "^4.0.0",
-		"browser-sync": "^2.23.6",
-		"gulp": "^3.9.1",
-		"gulp-babel": "^7.0.1",
+		"bootstrap": "^4.2.1",
+		"browser-sync": "^2.26.3",
+		"gulp": "^4.0.0",
+		"gulp-babel": "^8.0.0",
 		"gulp-clean": "^0.4.0",
-		"gulp-clean-css": "^3.9.2",
+		"gulp-clean-css": "^4.0.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-data": "^1.3.1",
 		"gulp-gh-pages": "^0.5.4",
 		"gulp-if": "^2.0.2",
-		"gulp-imagemin": "^4.1.0",
+		"gulp-imagemin": "^5.0.3",
 		"gulp-load-plugins": "^1.5.0",
-		"gulp-order": "^1.1.1",
-		"gulp-plumber": "^1.2.0",
-		"gulp-postcss": "^7.0.1",
-		"gulp-pug": "^3.3.0",
-		"gulp-rename": "^1.2.2",
-		"gulp-sass": "^3.1.0",
+		"gulp-order": "^1.2.0",
+		"gulp-plumber": "^1.2.1",
+		"gulp-postcss": "^8.0.0",
+		"gulp-pug": "^4.0.1",
+		"gulp-rename": "^1.4.0",
+		"gulp-sass": "^4.0.2",
 		"gulp-sequence": "^1.0.0",
 		"gulp-sourcemaps": "^2.6.4",
-		"gulp-uglify": "^3.0.0",
+		"gulp-uglify": "^3.0.1",
 		"jquery": "^3.3.1",
 		"minimist": "^1.2.0",
-		"vue": "^2.5.13"
+		"vue": "^2.6.5"
 	}
 }
