--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "Tien-Yi",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/core": "^7.4.5",
 		"autoprefixer": "^9.4.7",
 		"babel-core": "^6.26.3",
 		"babel-preset-env": "^1.7.0",
@@ -40,6 +41,7 @@
 		"gulp-uglify": "^3.0.1",
 		"jquery": "^3.3.1",
 		"minimist": "^1.2.0",
+		"popper.js": "^1.15.0",
 		"vue": "^2.6.5"
 	}
 }
